# tic-tac-toe

./: .ghc.environment.x86_64-mingw32-9.8.1  LICENSE  README.md  tic-tac-toe.cabal
app/: Main.hs
src/: App.hs  Game.hs  Handlers.hs
static/: index.html  style.css
test/: AppSpec.hs  GameSpec.hs  Spec.hs
