cabal-version:      3.4
name:               tic-tac-toe
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             SearchingFox
maintainer:         n3tstrang3r@yandex.ru
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tic-tac-toe
    import:           warnings
    main-is:          Main.hs
    other-modules:    Game
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        warp ^>=3.4.0,
        wai ^>=3.2.4,
        http-types ^>= 0.12.4,
        text ^>= 2.1,
        utf8-string ^>= 1.0.2
    hs-source-dirs:   app, src
    default-language: GHC2021
