cabal-version:      3.4
name:               tic-tac-toe
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             SearchingFox
maintainer:         n3tstrang3r@yandex.ru
category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  App, Handlers, Game
    build-depends:
        base ^>=4.19.0.0,
        warp ^>=3.4.0,
        wai ^>=3.2.4,
        http-types ^>=0.12.4,
        text ^>=2.1,
        utf8-string ^>=1.0.2
    hs-source-dirs:   src
    default-language: GHC2021

executable tic-tac-toe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        tic-tac-toe
    hs-source-dirs:   app
    default-language: GHC2021

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    GameSpec, AppSpec
    build-depends:
        base ^>=4.19.0.0,
        HUnit ^>=1.6.2.0,
        hspec ^>=2.11.7,
        hspec-wai ^>=0.11.1,
        tic-tac-toe
    hs-source-dirs:   test
    default-language: GHC2021
